Add Property Finished

--- a/MyLeasing.Web/Views/Owners/AddProperty.cshtml
+++ b/MyLeasing.Web/Views/Owners/AddProperty.cshtml
@@ -11,6 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        <!--Todo esto esta sujeto a la accion de add property-->
         <form asp-action="AddProperty">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <!--Campo que no pidamos en el get lo guarmamos en el hidden-->
